<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/_k_gold_with_blue_tamuk_logo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="#14000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendarView"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Events"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Events"
                android:background="@color/TamukBlue"/>

            <Button
                android:id="@+id/Activities"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Activity"
                android:background="@color/TamukBlue"/>

            <Button
                android:id="@+id/Holidays"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Holidays"
                android:background="@color/TamukBlue"/>

            <Button
                android:id="@+id/Exams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Exams"
                android:background="@color/TamukBlue"/>

            <Button
                android:id="@+id/Lists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Lists"
                android:background="@color/TamukBlue"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/upNextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/upNextTitle"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/refreshMain"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="@string/Refresh"
                android:background="@color/TamukBlue"/>

            <TextView
                android:id="@+id/nextEvent"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/scheduled"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>