<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_k_gold_with_blue_tamuk_logo">

    <EditText
        android:id="@+id/editFile"
        android:layout_width="148dp"
        android:layout_height="44dp"
        android:background="#14000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fileName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/Date"
        android:layout_width="148dp"
        android:layout_height="44dp"
        android:background="#14000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/date"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/NameOfEvent"
        android:layout_width="148dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:background="#14000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/eventName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="345dp"
        android:layout_height="347dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="133dp"
        android:background="#14000000"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPersonName"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AddEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="294dp"
        android:layout_marginTop="664dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="19dp"
        android:text="@string/addEvent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/TamukBlue"/>
</androidx.constraintlayout.widget.ConstraintLayout>